--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
                   <span>Problem Solving</span><br />Data stucture and Algorithm
                 </li>
                 <li>
-                  <span>Frontend</span><br />Creative web design, HTML, CSS,JS, ReactJs
+                  <span>Frontend</span><br />Creative web design, HTML, CSS,JS,
+                  ReactJs
                 </li>
-                <li><span>Backend</span><br />Working on MongoDB, Express,Sql</li>
-                <li><span>Fundamental</span><br>OS, DBMS, CPP</li>
+                <li>
+                  <span>Backend</span><br />Working on MongoDB, Express,Sql
+                </li>
+                <li><span>Fundamental</span><br />OS, DBMS, CPP</li>
               </ul>
             </div>
             <div class="tab-contents" id="experience">
@@ -92,40 +95,44 @@
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Design</h2>
-            <p>Description</p>
+            <h2>Backend Developer</h2>
+
             <p>
-              Creating a SEO friendly website with attractive styles and
-              selecting color, topology and images responsive website and
-              cutomized layouts.
+              I am an Backend Developer with a focus on building server-side
+              applications and managing data effectively. Proficient in
+              languages like JavaScript and Node.js, I'm adept at optimizing
+              performance, ensuring data security, and enhancing server
+              infrastructure. My goal is to create efficient, reliable, and
+              scalable backends that power exceptional web and mobile
+              applications.
             </p>
             <!--<a href="#">Learn More</a>-->
           </div>
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Front Design</h2>
-            <p>Description</p>
+            <h2>Frontend Developer</h2>
+
             <p>
-              visually appealing and user-centric interfaces by implementing the
-              design's aesthetics, typography, colors, and graphical elements.
-              Also ensure seamless navigation, smooth animations, and intuitive
-              user interactions. Furthermore, frontend developers are
-              responsible for optimizing websites for different devices and
-              screen sizes, enhancing performance, and ensuring cross-browser
-              compatibility.
+              As a dedicated Frontend Developer, I specialize in crafting
+              captivating and user-friendly web experiences. With a deep
+              expertise in HTML, CSS, JavaScript and ReactJs, I'm passionate
+              about translating design concepts into seamless, interactive
+              interfaces. My work revolves around creating engaging user
+              experiences that leave a lasting impression.
             </p>
             <!--<a href="#">Learn More</a>-->
           </div>
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Back Design</h2>
-            <p>Description</p>
+            <h2>Problem Solver</h2>
+
             <p>
-              Handling data storage, processing, and server-side functionalities
-              that power the user interface created by frontend developers, to
-              build the server architecture, databases, APIs (Application
-              Programming Interfaces), and other components that enable the
-              frontend to function smoothly.
+              As a Data Structures and Algorithms (DSA) Problem Solver
+              specializing in C++, I thrive on solving algorithmic challenges.
+              My deep understanding of C++ allows me to optimize algorithms and
+              data structures for mission-critical applications. I'm dedicated
+              to designing elegant, efficient solutions that harness the full
+              potential of C++'s capabilities, delivering code fast.
             </p>
             <!--<a href="#">Learn More</a>-->
           </div>
@@ -140,44 +147,42 @@
           <div class="work">
             <img src="images/work1.jpg" />
             <div class="layer">
-              <h3>Landing Page</h3>
-              <p>
-                Landing Page of resturant, web page combines visual appeal,
-                high-quality images of the restaurant's .Links to the
-                restaurant's social media profiles allow visitors to explore
-                more content, connect with signature dishes.
-              </p>
-              <a href="https://landing-page-stuti.netlify.app"
-                ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
-          </div>
-          <div class="work">
-            <img src="images/work2.jpg" />
-            <div class="layer">
               <h3>Doctor Appointment Booking</h3>
               <p>
                 A doctor appointment booking system is complete frontend and
                 backend project , where user can easily booking the appointment
-                with proper date and time and also check seats availability.
-                and also avialable proper details.
+                with proper date and time and also check seats availability. and
+                also avialable proper details.I developed a full-stack web
+                application using the MERN stack with Redux for state
+                management. Notably, the application featured secure user
+                authentication via JWT. It included an admin control panel,
+                doctor profile management, appointment scheduling, and a user
+                notification system for an enhanced user experience.
               </p>
-              <a href="https://github.com/stuti8272/Doctor-Appointment-Booking-System"
+              <a
+                href="https://github.com/stuti8272/Doctor-Appointment-Booking-System"
                 ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
           <div class="work">
-            <img src="images/work3.jpg" />
+            <img src="images/work2.png" />
             <div class="layer">
-              <h3>Scientific Calculator</h3>
+              <h3>Blog App</h3>
               <p>
-                A calculator where all complex task will be performed.
+                In the project, I undertook the design and development of a
+                server-backed blog application, which incorporated an array of
+                features for seamless user interaction. The focal point of this
+                application was the implementation of comprehensive CRUD
+                (Create, Read, Update, Delete) functionality, ensuring users
+                could effortlessly create, read, edit, and remove blog content.
               </p>
-              <a href="https://github.com/stuti8272/Scientific-Calculator"
+              <a href="https://github.com/stuti8272/BLOG-APP"
                 ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
+          </div>
+          
           </div>
         </div>
         <a href="#" class="btn">See more</a>
@@ -197,8 +202,12 @@
               ></a>
               <a href=""><i class="fa-brands fa-instagram"></i></a>
               <a href=""><i class="fa-brands fa-twitter"></i></a>
-              <a href="www.linkedin.com/in/stuti-singh72"><i class="fa-brands fa-linkedin"></i></a>
-              <a href="https://github.com/stuti8272"><i class="fa-brands fa-github"></i></a>
+              <a href="www.linkedin.com/in/stuti-singh72"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/stuti8272"
+                ><i class="fa-brands fa-github"></i
+              ></a>
             </div>
             <a href="images/My-CV.pdf" download class="btn btn 2"
               >Download CV</a
